Merge Java-17 team/FRAMEWORK to master
Squashed commit of the following:

commit 22da0f4ee10a8147ba4012ffc090a740627275d3
Author: jenkins <ea@hmcts.net>
Date:   Thu Sep 19 18:20:36 2024 +0000

    New 17.0.4-FRAMEWORK-SNAPSHOT

commit 7dc179d72e55d74d53e80b57ac1d2855cd0fe0d9
Author: santosh <santhosh.kotha@hmcts.net>
Date:   Thu Sep 19 17:00:19 2024 +0100

    Update context versions

    Change-Id: If3617cf7a48bfd2507c30dd976ebd8c49355257f

commit f7244a4f863419085f1118158acb90ff3c023f25
Author: jenkins <ea@hmcts.net>
Date:   Wed Sep 18 21:41:18 2024 +0000

    New 17.0.3-FRAMEWORK-SNAPSHOT

commit 1ae2c4223b75afac358d4741378cf45e7ccac2a0
Merge: 601fd8651 70e9ec64b
Author: santosh <santhosh.kotha@hmcts.net>
Date:   Tue Sep 17 14:55:42 2024 +0100

    Merge branch 'master' into team/FRAMEWORK

    Change-Id: I8183091b89b58282c44100fe73e099ecdf648fc6

commit 601fd865153762f32eb33c54b84127cc51193d6e
Author: santosh <santhosh.kotha@hmcts.net>
Date:   Tue Sep 17 13:02:06 2024 +0100

    Dummy commit to trigger pipeline

    Change-Id: I178629b9920ac7f99a3296ada6d3f446019dccb8

commit eb155fd6144bb580bf9229dc664e92b9755e0a47
Author: santosh <santhosh.kotha@hmcts.net>
Date:   Tue Sep 17 10:57:20 2024 +0100

    Clean up TODOs added in previous PR

    Change-Id: I8587a8ba9e459e95ecc0810883d0b43d66dcba9e

commit 1bbe7034d88edb8df0d8b8e7d6acddeee2558471
Author: jenkins <ea@hmcts.net>
Date:   Mon Sep 16 11:53:07 2024 +0000

    New 17.0.2-FRAMEWORK-SNAPSHOT

commit a0116a006ba83fb0ba135e46a3ee2bec9299e40e
Author: santosh <santhosh.kotha@hmcts.net>
Date:   Thu Sep 12 12:06:36 2024 +0100

    Migrate ITs to use new message consumer clients

    Change-Id: I3cca1bfdb628b927aac7641a56f760718a3a4259

commit 90a766f5d0c558c99fb7475b87629a9e5191f107
Author: jenkins <ea@hmcts.net>
Date:   Fri Sep 6 14:40:34 2024 +0000

    New 17.0.1-FRAMEWORK-SNAPSHOT

commit ff7f545c6be4dd34cfaec33717a02ce3e9a1289b
Author: santosh <santhosh.kotha@hmcts.net>
Date:   Thu Sep 5 17:42:53 2024 +0100

 